--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Intermobility</title>
   </head>
-  <body>
+  <body class="scroll-smooth">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
