Updating meta / title and 404 error

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
     />
     <title>Intermobility</title>
+    <meta
+      name="description"
+      content="InterMobility, the new and free european network dedicated to mobility and transportation in Europe."
+    />
+    <meta name="keywords" content="Mobility, Automotive, Transportation, Energy" />
   </head>
   <body class="scroll-smooth">
     <div id="app"></div>
